removed overflow nowrap issue in CSS.

--- a/src/assets/CSS/portfolio.css
+++ b/src/assets/CSS/portfolio.css
@@ -20,7 +20,6 @@ a{
     width:100%;
     background-color: var(--background-color);
     line-height: normal;
-    white-space: nowrap;
     box-sizing: border-box;
 }
 
